@startuml loginClassDiagram
hide empty members

class Main {
    + main(String[] args) : void
}

class LoginController {
    + getEmail() : String
    + getPassword() : String
    + onClickButtonLogin()
}

class UserFacade {
    - {static} instance : UserFacade
    - userDAO : UserDAO
    - UserFacade()
    + {static} getUserFacade() : UserFacade
    + login() : User
}

Interface UserDAO {
  + {abstract} getUserByEmailPwd() : User
}

class PostgresUserDAO {
    - {static} instance : PostgresUserDAO
    - PostgresUserDAO()
    + {static} getPostgresUserDAO() : PostgresUserDAO
    + getUserByEmailPwd() : User
}

class ConnectionManager {
  # {static} pool: DataSource
  + {static} getConnection(): Connection
  + {static} releaseConnection(): void
}

interface AbstractFactory {
  + {static} getInstance(): AbstractFactory
  + {abstract} getUserDAO() : UserDAO
}

class PostgresFactory {
    - {static} instance : PostgresFactory
    - PostgresFactory()
    + {static} getPostgresFactory(): PostgresFactory
    + getUserDAO() : UserDAO
}

database "Postgres\nDatabase" as Postgres {

}

Main - LoginController

LoginController --> UserFacade

PostgresFactory --|> AbstractFactory
PostgresUserDAO --|> UserDAO

UserFacade --> PostgresFactory : instanciate

PostgresFactory --> PostgresUserDAO : instanciate



PostgresUserDAO --> ConnectionManager : getConnection()

ConnectionManager --> Postgres : connect
@enduml